<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_bottom"
        android:icon="@drawable/home"
        android:iconTint="@android:color/black"
        android:menuCategory="system"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/user_bottom"
        android:icon="@drawable/location"
        android:iconTint="#121"
        android:menuCategory="system"
        android:title="@string/current_location"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/notification_bottom"
        android:icon="@drawable/notification"
        android:menuCategory="system"
        android:title="@string/notification"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/add_member_bottom"
        android:icon="@drawable/friends"
        android:menuCategory="system"
        android:title="@string/my_friends"
        app:showAsAction="ifRoom" />


</menu>