<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@drawable/shape"
        android:splitMotionEvents="true"
        android:theme="@style/AppTheme"
        app:headerLayout="@layout/menu_header"
        app:itemIconTint="#2904FB"
        app:itemTextColor="#02115E"
        app:menu="@menu/drawer_menu" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/NoActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/image"
                android:focusable="true"
                android:theme="@style/NoActionBar"
                app:menu="@menu/top_navigation"
                app:navigationIcon="@drawable/ic_nav_drawer"
                app:title="Navigation Drawer">

            </androidx.appcompat.widget.Toolbar>

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true">


                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5sp"
                        android:orientation="vertical">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            app:cardBackgroundColor="#07A2AEA2"
                            app:cardCornerRadius="10sp"
                            app:cardElevation="2dp"
                            app:cardUseCompatPadding="true">

                            <com.smarteist.autoimageslider.SliderView
                                android:id="@+id/imageSlider"
                                android:layout_width="match_parent"
                                android:layout_height="220dp"
                                app:sliderAnimationDuration="600"
                                app:sliderAutoCycleDirection="back_and_forth"
                                app:sliderAutoCycleEnabled="true"
                                app:sliderIndicatorAnimationDuration="600"
                                app:sliderIndicatorGravity="center_horizontal|bottom"
                                app:sliderIndicatorMargin="15dp"
                                app:sliderIndicatorOrientation="horizontal"
                                app:sliderIndicatorPadding="3dp"
                                app:sliderIndicatorRadius="2dp"
                                app:sliderIndicatorSelectedColor="#5A5A5A"
                                app:sliderIndicatorUnselectedColor="#FFF"
                                app:sliderScrollTimeInSec="1"
                                app:sliderStartAutoCycle="true" />


                        </androidx.cardview.widget.CardView>


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3sp"
                        android:layout_marginTop="210dp"
                        android:layout_marginRight="3sp"
                        android:orientation="vertical"
                        android:padding="10dp">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="145dp"
                            android:layout_marginBottom="10dp"
                            android:orientation="horizontal">


                            <androidx.cardview.widget.CardView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical"
                                app:cardCornerRadius="10sp"
                                app:cardElevation="2dp"
                                app:cardUseCompatPadding="true">

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@drawable/shape"
                                    android:elevation="10sp">

                                    <ImageView
                                        android:layout_width="150sp"
                                        android:layout_height="match_parent"
                                        android:layout_alignParentLeft="true"
                                        android:src="@drawable/location" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentRight="true"
                                        android:layout_marginTop="55dp"
                                        android:layout_marginRight="20sp"
                                        android:text="@string/know_your_current_location"
                                        android:textSize="17dp"
                                        android:textStyle="bold" />

                                    <Button
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:background="@android:color/transparent"
                                        android:clickable="true"
                                        android:onClick="btn_currentLocation" />


                                </RelativeLayout>


                            </androidx.cardview.widget.CardView>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="145dp"
                            android:layout_marginBottom="10dp"
                            android:orientation="horizontal">


                            <androidx.cardview.widget.CardView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical"
                                app:cardCornerRadius="10sp"
                                app:cardElevation="2dp"
                                app:cardUseCompatPadding="true">

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@drawable/shape"
                                    android:elevation="10sp">

                                    <ImageView
                                        android:layout_width="150sp"
                                        android:layout_height="match_parent"
                                        android:layout_alignParentEnd="true"
                                        android:layout_alignParentRight="true"
                                        android:padding="10sp"
                                        android:src="@drawable/alluser" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentLeft="true"
                                        android:layout_marginLeft="50sp"
                                        android:layout_marginTop="55dp"
                                        android:text="@string/find_new_friens"
                                        android:textSize="17dp"
                                        android:textStyle="bold" />

                                    <Button
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:background="@android:color/transparent"
                                        android:clickable="true"
                                        android:onClick="btn_userList" />


                                </RelativeLayout>


                            </androidx.cardview.widget.CardView>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="145dp"
                            android:layout_marginBottom="40sp"
                            android:orientation="horizontal">


                            <androidx.cardview.widget.CardView
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical"
                                app:cardCornerRadius="10sp"
                                app:cardElevation="2dp"
                                app:cardUseCompatPadding="true">

                                <RelativeLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:background="@drawable/shape"
                                    android:elevation="10sp">

                                    <ImageView
                                        android:layout_width="150sp"
                                        android:layout_height="match_parent"
                                        android:layout_alignParentLeft="true"
                                        android:padding="10sp"
                                        android:src="@drawable/friends" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentRight="true"
                                        android:layout_marginTop="55dp"
                                        android:layout_marginRight="50sp"
                                        android:text="@string/view_your_friend_list"
                                        android:textSize="17dp"
                                        android:textStyle="bold" />

                                    <Button
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:background="@android:color/transparent"
                                        android:clickable="true"
                                        android:onClick="btn_friendlist" />


                                </RelativeLayout>


                            </androidx.cardview.widget.CardView>


                        </LinearLayout>


                    </LinearLayout>


                </RelativeLayout>
            </ScrollView>


        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/transparent"
            app:itemBackground="@color/white"
            app:itemIconTint="@android:color/black"
            app:menu="@menu/bottom_nav_menu" />


    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>